[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player2.gd" type="Script" id=1]
[ext_resource path="res://Player/Images/left.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 58.5, 88.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 113.265

[node name="Player2" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.499998, 28.5 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Floor_Check" type="RayCast2D" parent="."]
position = Vector2( 0, 39 )
enabled = true

[node name="Floor_Check2" type="RayCast2D" parent="."]
position = Vector2( -85, 39 )
enabled = true

[node name="Floor_Check3" type="RayCast2D" parent="."]
position = Vector2( 85, 38 )
enabled = true
